# saalis

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
audit/: index.html
contributing/: index.html
docs/: audit.md  contributing.md  index.md  install.md  mcp.md  policy.md  quickstart.md  rendering.md  sidecar.md  strategies.md
docs/integrations/: crewai.md  langgraph.md
examples/: demo.py  mcp_demo.py  sidecar_demo.py
install/: index.html
integrations/crewai/: index.html
integrations/langgraph/: index.html
mcp/: README.md  index.html  pyproject.toml
mcp/src/saalis_mcp/: __init__.py  __main__.py  resources.py  server.py  settings.py  state.py  tools.py
mcp/tests/: conftest.py  test_resources.py  test_tools.py
policy/: index.html
quickstart/: index.html
rendering/: index.html
search/: search_index.json
sidecar/: Dockerfile  index.html  pyproject.toml
sidecar/src/saalis_sidecar/: app.py  metrics.py  settings.py  state.py
sidecar/src/saalis_sidecar/routes/: audit.py  human.py  resolve.py
sidecar/tests/: conftest.py  test_audit_routes.py  test_health.py  test_human_response.py  test_resolve.py
src/saalis/: __init__.py  arbitrator.py  models.py  policy.py  strategy.py  wiring.py
src/saalis/audit/: __init__.py  base.py  jsonl.py  sqlite.py
src/saalis/integrations/: __init__.py  crewai.py  langgraph.py
strategies/: index.html
tests/: conftest.py  test_arbitrator.py  test_audit.py  test_crewai_adapter.py  test_langgraph_adapter.py  test_llm_judge.py  test_models.py  test_policy.py  test_renderers.py  test_weighted_vote.py
