[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saalis-mcp"
version = "0.2.0"
description = "MCP server for Saalis — expose arbitration as native MCP tools"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ulhaqi12", email = "ulhaqi12@gmail.com" }]
dependencies = [
    "saalis",
    "mcp>=1.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/saalis_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/saalis_mcp"]

[tool.uv.sources]
saalis = { workspace = true }
