[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saalis-sidecar"
version = "0.1.0"
description = "HTTP sidecar for the Saalis arbitration library"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "saalis",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "prometheus-client>=0.20",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/saalis_sidecar"]

[tool.uv.sources]
saalis = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/saalis_sidecar"]
